# renju

./: .gitignore  CLAUDE.md  README.md  pyrightconfig.json
.beads/: interactions.jsonl  (+1 more)
backend/: levels.toml  pyproject.toml  pyrightconfig.json  run.py
backend/alembic/: env.py
backend/alembic/versions/: 12c29568e213_games.py  31eab62529df_level_max_depth.py  5d790f3dfeb5_engine_config.py  67237272bf40_user_settings_v2.py  c56e8e9ff55e_users.py  eab503b3e51b_game_retention.py
backend/app/: app_factory.py  auth.py  config.py  config_repository.py  error_handlers.py  exceptions.py  game_service.py  levels_config.py  logging_utils.py
backend/app/dal/: users.py
backend/app/db/: deps.py  engine.py  session.py
backend/app/domain/: engine_params.py  errors.py  game.py  levels.py  levels_depth.py  opening.py  retention.py  rules.py  undo.py  values.py
backend/app/dtos/: auth.py  engine_config.py
backend/app/game/: _time.py  advance_manager.py  controllers.py  deps.py  dtos.py  event_hub.py  mappers.py  moves.py  players.py  ports.py  repository.py  retention_service.py  service.py  settings_repository.py
backend/app/middleware/: csrf.py  refresh.py  security_headers.py
backend/app/models/: game.py  level.py  user.py  user_settings.py
backend/app/rapfi/: adapter.py  engine_config_file.py  process.py  protocol.py  registry.py
backend/app/routers/: admin.py  auth.py  games.py  settings.py
backend/app/services/: admin_service.py  auth_service.py
backend/scripts/: create_admin.py  play_cli.py
backend/scripts/engine_probes/: probe_black_line_raw.py  probe_black_line_zone_raw.py  probe_black_line_zone_undo_raw.py  probe_depth_vs_strength_raw.py  probe_free_raw.py  probe_undo_noclear_raw.py  probe_undo_raw.py  probe_white_first_raw.py  probe_zone_raw.py
backend/tests/: conftest.py
backend/tests/api/: test_admin_engine_config.py  test_admin_users.py  test_auth_endpoints.py  test_create_admin.py  test_error_handlers.py  test_games_endpoints.py  test_games_sse.py  test_games_winning_line.py  test_middleware.py  test_settings_router.py  test_spa_serving.py
backend/tests/integration/: test_adapter.py  test_games_live.py  test_process.py  test_registry_live.py
backend/tests/integration/fixtures/: hang_engine.sh
backend/tests/unit/: test_adapter_commands.py  test_advance_manager.py  test_auth_primitives.py  test_auth_service.py  test_config.py  test_config_repository.py  test_controllers.py  test_dal_users.py  test_db_session.py  test_engine_config_file.py  test_engine_params.py  test_event_hub.py  test_game.py  test_game_repository.py  test_game_service.py  test_game_service_contour.py  test_level_model.py  test_levels.py  test_levels_config.py  test_levels_depth.py  test_logging_utils.py  test_migration.py  test_opening.py  test_play_cli.py  test_players.py  test_ports.py  test_protocol.py  test_registry.py  test_retention.py  test_retention_service.py  test_rules.py  test_settings_repository.py  test_undo.py  test_values.py
(+129 files in other folders)
