[project]
name = "renju-backend"
version = "0.1.0"
description = "Renju web app backend"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "alembic>=1.18.4",
    "bcrypt>=5.0.0",
    "fastapi>=0.136.3",
    "greenlet>=3.5.1",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "pyjwt>=2.13.0",
    "sqlalchemy>=2.0.50",
    "uvicorn[standard]>=0.49.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.2",
    "pytest-asyncio>=0.24",
    "ruff>=0.4",
]

[tool.uv]
# Виртуальный проект: само приложение как пакет не собираем и не ставим,
# uv управляет только зависимостями. Импорты работают через pytest pythonpath.
package = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
pythonpath = ["."]  # чтобы `import app` / `import scripts` работали из тестов

[tool.ruff]
line-length = 100
extend-exclude = [
    "alembic",  # автоген-шаблон Alembic (env.py E402, миграции UP035/E501) не линтуем
    "scripts/engine_probes",  # форензика движка (raw-пробы Rapfi) — исследовательские, не прод-стандарт
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
